# Collab-Admin

./: .coverage  .gitignore  CLAUDE.md  Issues.txt  README.md  autofix_report_enriched.json  codex-analysis-10.json  codex-analysis-18.json  codex-analysis-20.json  codex-analysis-21.json  codex-analysis-22.json  codex-analysis-23.json  codex-analysis-24.json  codex-session-10.jsonl  codex-session-18.jsonl  codex-session-20.jsonl  codex-session-21.jsonl  codex-session-22.jsonl  codex-session-23.jsonl  codex-session-24.jsonl  coverage.xml  pr_body.md  pyproject.toml
.github/ISSUE_TEMPLATE/: collaborator_onboarding.yml
agents/: codex-190.md  codex-39.md  codex-42.md  codex-44.md  codex-45.md
config/: dashboard_public.yml  project.yml
docs/: 00-charter.md  01-operating-model.md  02-security-boundaries.md  03-ai-policy.md  04-time-tracking-policy.md  05-definition-of-done.md  06-review-workflow.md  07-compensation-expenses.md  08-month-end-settlement.md  09-trend-review-protocol.md  10-agent-integration-protocol.md  11-consumer-usability-protocol.md  12-marketplace-plan-protocol.md  13-project-instrumentation-roadmap.md  14-workflows-ecosystem.md  ADMIN_SETUP_CHECKLIST.md  KEEPALIVE_TROUBLESHOOTING.md  ONBOARDING.md  ONBOARDING_ADMIN_GUIDE.md  SETUP_CHECKLIST.md
logs/: time_log_template.csv
reviews/: README.md
rubrics/: agent_integration.yml  agent_output_contract.yml  consumer_friction_log.yml  consumer_project_proposal.yml  marketplace_implementation_plan.yml  rubric_index.yml  trend_module_note.yml  trend_risk_register.yml  trend_subsystem_brief.yml  trend_walkthrough.yml  writing_quality.yml
scripts/: __init__.py  build_static_dashboard.py  collect_ecosystem_status.py  create_review_record.py  create_revision_issues.py  generate_month_end.py  validate_config.py  validate_expense_log.py  validate_friction_log.py  validate_rubrics.py  validate_run_contract.py  validate_submission_packet.py  validate_submission_packet_pr.py  validate_time_log.py  validate_time_log_template.py  validate_trend_references.py
streamlit_app/: app.py  github_client.py  review_console.py
templates/: auto-revision-issues.yml  onboarding_review.md  review_record.yml  submission_packet.md
tests/: test_docs_links.py  test_log_templates.py  test_workflow_templates.py
tools/: langchain_client.py  llm_provider.py  pep517_backend.py  requirements-llm.txt
(+52 files in other folders)
